# pybanking

./: .gitignore  README.md  Readme.md  pybank.py  setup.cfg
.github/workflows/: codeql-analysis.yml
config/: db_api.ini.sample
src/: LICENSE.md  WARRANTY.md  db.py  main.py  pybank.py  pybanking.py
src/controller/: apirequests.py  authorize.py  base.py  db.py
src/model/: account.py  bank.py  bankapi.py  iban.py  transaction.py
