[metadata]
name = pybanking-hirschrobert
version = 0.0.1
url = https://github.com/hirschrobert/pybanking
author = Robert Hirsch
author_email = dev@robert-hirsch.de
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
description = a backend banking client at your service
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
install_requires =
    beautifulsoup4>=4.8.2
    dataset>=1.4.4
    lxml>=4.5.0
    oauthlib>=3.1.0
    requests>=2.22.0
    requests-oauthlib>=1.3.0
    SQLAlchemy>=1.3.23
    urllib3>=1.25.8
include_package_data = True
packages = find:

[options.packages.find]
exclude=test

[options.package_data]
config = *.ini.sample
